--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<a href="#">
 						<img src="Img/MUEJRES-578x330.png" alt="noticias1" class="noti__img">
 				</a>	
-				<h3 class="article__titulo">Noticias 1</h3>
+				<h3 class="article__titulo">Noticias de la provincia</h3>
 				<p class="article__bajada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis atque quibusdam saepe, incidunt culpa doloremque corrupti in sunt, totam pariatur. Facere amet minima consequatur omnis quas laborum assumenda cum?
 				</p>
 			</div>
